# Richlink_Smart_Box-M482S-

./: .gitignore  README.md  vcpkg-configuration.json
.git-commit-msgs/: 0001-move-pwm-to-legacy.txt
.github/: copilot-instructions.md
RELEASES/: V1.4.1.md  index.md  v1.4.1.md
RELEASES/assets/V1.4.1/: RELEASE_BODY_V1.4.1.txt  RELEASE_NOTES_V1.4.1.txt  RL_SPORT.axf
SampleCode/ISP/ISP_HID/: main.c  targetdev.h
SampleCode/RL_SPORT/: BLE_ATCmd_test_mode_design.md  BOARD_TEST_README.md  GSENSOR_JUMP_DETECT_README.md  GSENSOR_JUMP_README.md  README.md  RL_SPORT_FW_規格.md  adc.c  adc.h  ble.c  ble.h  ble_at_repl.c  ble_at_repl.h  ble_helpers.c  ble_helpers.h  ble_parser.h  board_test_gpio.c  board_test_gpio.h  buzzer.c  buzzer.h  game_logic.c  game_logic.h  gpio.c  gpio.h  gsensor.c  gsensor.h  gsensor_jump_detect.c  gsensor_jump_detect.h  hall_anticheat.c  hall_anticheat.h  host_compat.h  i2c.c  i2c.h  led.c  led.h  main.c  movement.c  movement.h  power_mgmt.c  power_mgmt.h  powerdown.c  (+13 more)
SampleCode/RL_SPORT/.git-commit-msgs/: 0002-move-timer-to-drivers.txt  0003-move-adc-to-drivers.txt  0004-move-i2c-to-drivers.txt  0005-move-power-mgmt-to-board.txt  0006-move-gpio-to-board.txt  0007-move-board-test-gpio-to-board.txt  0008-move-gsensor-to-drivers.txt
SampleCode/RL_SPORT/GCC/: .cproject  .project
SampleCode/RL_SPORT/Keil/: RL_SPORT.uvprojx
SampleCode/RL_SPORT/VSCode/: .clangd  RL_SPORT.cbuild-idx.yml  RL_SPORT.cbuild-set.yml  RL_SPORT.cproject.yml  RL_SPORT.csolution.yml  vcpkg-configuration.json
SampleCode/RL_SPORT/app/: game_logic.c  mole_game.c  mole_game.h  squat_mode.c  squat_mode.h
SampleCode/RL_SPORT/board/: board_test_gpio.c  board_test_gpio.h  gpio.c  gpio.h  power_mgmt.c  power_mgmt.h
SampleCode/RL_SPORT/docs/: AI_FW_Debug_Guide.md  BLE_PACKET_QUICK_REFERENCE.md  BLE_PROTOCOL.md  IMPLEMENTATION_NOTES_GAME_FLOW.md  IMPLEMENTATION_NOTES_SQUAT_MODE.md  SL_SC7U22_AOI_Angle_Driver.c  SL_SC7U22_AOI_Angle_Driver.h
SampleCode/RL_SPORT/drivers/: adc.c  adc.h  buzzer.c  buzzer.h  gsensor.c  gsensor.h  i2c.c  i2c.h  led.c  led.h  timer.c  timer.h  ws2812b.c  (+7 more)
SampleCode/Smart_Box/: AGNETS.md  BLE_MESH_AT_MODULE_README.md  BUGFIX_RTU_CLIENT_RACE_CONDITION.md  DIGITAL_IO_GUIDE.md  DOCS_MODBUS_BLE.md  IMPLEMENTATION_SUMMARY.md  IO_LOGIC_UPDATE.md  KEY_PIN_CORRECTION.md  LED_Controller_README.md  LED_POLARITY_UPDATE.md  MDTS_PA6_TIMER_USAGE.md  MESH_AGENT_TYPE_TEST_GUIDE.md  MESH_MODBUS_AGENT_USAGE.md  MESH_MODBUS_Agent_Implementation_Summary.md  MESH_MODBUS_Agent_mode.md  MILLISECOND_UPDATE_SUMMARY.md  MODBUS_AUTO_DETECT_IMPLEMENTATION.md  MODBUS_RTU_AGENT_EXTENDED.md  MODBUS_RTU_TESTING_GUIDE.md  SMART_BOX_USER_GUIDE.md  TYPE_FIX_SUMMARY.md  ble_mesh_at.c  ble_mesh_at.h  digital_io.c  digital_io.h  hex_utils.c  hex_utils.h  key_controller.c  key_controller.h  led_controller.c  led_controller.h  led_indicator.c  led_indicator.h  main.c  main.c.bak  mesh_handler.c  mesh_handler.h  mesh_modbus_agent.c  mesh_modbus_agent.h  modbus_auto_detect.c  (+3 more)
SampleCode/StdDriver/GPIO_OutputInput/VSCode/tmp/GPIO_OutputInput.debug+GNUC/: CMakeLists.txt  groups.cmake  toolchain.cmake
SampleCode/Template/: main.c
doc/: index.html
docs/: .github_copilot-instructions.md  IMPLEMENTATION_NOTES.md  README.md  UART_AUTO_TEST_PROTOCOL.md  index.html
scripts/: commit_move_pwm_to_legacy.ps1
(+153 files in other folders)
